<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="choose">Please choose a file to download.</string>
    <string name="retrofit_option">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="load_app">LoadApp - Current repository by Udacity</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download">Download</string>
    <string name="downloading"> Downloading </string>
    <string name="download_files">Downloading Files</string>
    <string name="success">File Successfully Downloaded</string>
    <string name="fail">Failed to Download File</string>
    <string name="details">View details</string>
    <string name="file">File: </string>
    <string name="status">Status: </string>
    <string name="back">Back</string>

</resources>
