<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:padding="16dp"
        android:src="@drawable/icons8_download_from_cloud_96"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/rg_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/glide_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/glide"
                    android:textSize="@dimen/default_text_size" />

                <RadioButton
                    android:id="@+id/load_app_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/load_app"
                    android:textSize="@dimen/default_text_size" />

                <RadioButton
                    android:id="@+id/option_retrofit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/retrofit_option"
                    android:textSize="@dimen/default_text_size" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/download"
        app:circularProgressColor="@color/colorAccent"
        app:primaryBackgroundColor="@color/colorPrimary"
        app:secondaryBackgroundColor="@color/colorPrimaryDark"
        app:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
         />

<!--    <com.udacity.LoadingButton-->
<!--        android:id="@+id/custom_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_margin="20dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:circularProgressColor="@color/colorAccent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:primaryBackgroundColor="@color/colorPrimary"-->
<!--        app:secondaryBackgroundColor="@color/colorPrimaryDark"-->
<!--        app:textColor="@android:color/white" />-->

</androidx.constraintlayout.widget.ConstraintLayout>